web/api: use status code `201` instead of `200` for `POST` requests
